--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
     text-decoration: underline;
   }
   .right-section {
+    margin-left: 10px;
     display: flex;
     align-items: center;
     gap: 10px;
