--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
   <nav class="navbar">
     <div class="nav-links">
-      <a href="#datos-personales">Datos Personales</a>
-      <a href="#semestre-i">Semestre I</a>
-      <a href="#semestre-ii">Semestre II</a>
+      <a href="#personal-info">Datos Personales</a>
+      <a href="#semestre i">Semestre I</a>
+      <a href="#semestre ii">Semestre II</a>
       <a href="#taller">Taller</a>
       <a href="#destacados">Destacados</a>
     </div>
     <div class="right-section">
-      <span>Maria Camila Sayer</span>
+      <span>| Maria Camila Sayer</span>
       <img class="logo" src="img/prueba1.png" alt="">
     </div>
   </nav>
@@ -34,6 +34,8 @@
     </div>
   </div>
 
+  <br>
+  <br>
   <section id="semestre i" class="section gallery-section">
     <center><h1>Semestre I</h1></center>
     <div class="gallery">
@@ -167,6 +169,7 @@
     .profile-pic {
       width: 50%;
       object-fit: cover;
+      border-radius: 10px;
     }
 
     .info-text {
