--- a/index.html
+++ b/index.html
@@ -20,16 +20,19 @@
     </div>
     <div class="right-section">
       <span>| Maria Camila Sayer</span>
-      <img class="logo" src="img/prueba1.png" alt="">
+      <img class="logo" src="img/cs.png" alt="">
     </div>
   </nav>
 
   <div id="personal-info" class="personal-info-layout">
-    <img src="img/datopersonal.jpg" alt="Foto de perfil" class="profile-pic">
+    <img src="infologo/cam.jpg" alt="Foto de perfil" class="profile-pic">
     <div class="info-text">
-      <p>Nombre: Juan Pérez</p>
+      <p>Nombre: maría camila sáyer medina</p>
+      <br>
       <p>Ocupación: Diseñador Web</p>
+      <br>
       <p>Ubicación: Bogotá, Colombia</p>
+      <br>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam odit facere molestias odio accusantium, corporis magni dignissimos reiciendis quas, ullam perferendis nulla doloremque quisquam, error praesentium libero! Fugit, iste unde?</p>
     </div>
   </div>
@@ -39,8 +42,8 @@
   <section id="semestre i" class="section gallery-section">
     <center><h1>Semestre I</h1></center>
     <div class="gallery">
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
+        <a href="img_4.html"><img src="semestre1/Armonías cromáticas.png"></a>
+        <a href="img_4.html"><img src="semestre1/Grafías.jpg"></a>
         <a href="img_4.html"><img src="img/prueba1.png"></a>
         <a href="img_4.html"><img src="img/prueba1.png"></a>
         <a href="img_4.html"><img src="img/prueba1.png"></a>
@@ -53,7 +56,7 @@
   <section id="semestre ii" class="section gallery-section">
     <center><h1>Semestre II</h1></center>
     <div class="gallery">
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
+        <a href="img_4.html"><img src="semestre2/Puntillismo.jpg"></a>
         <a href="img_4.html"><img src="img/prueba1.png"></a>
         <a href="img_4.html"><img src="img/prueba1.png"></a>
         <a href="img_4.html"><img src="img/prueba1.png"></a>
@@ -81,10 +84,10 @@
   <section id="destacados" class="section gallery-section">
     <center><h1>Destacados</h1></center>
     <div class="gallery">
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
+        <a href="img_4.html"><img src="destacados/Anime.jpg"></a>
+        <a href="img_4.html"><img src="destacados/Coco.jpg"></a>
+        <a href="img_4.html"><img src="destacados/Viper chibi.jpg"></a>
+        <a href="img_4.html"><img src="destacados/jirafa.png"></a>
         <a href="img_4.html"><img src="img/prueba1.png"></a>
         <a href="img_4.html"><img src="img/prueba1.png"></a>
         <a href="img_4.html"><img src="img/prueba1.png"></a>
