--- a/index.html
+++ b/index.html
@@ -37,61 +37,43 @@
     </div>
   </div>
 
-  <br>
-  <br>
+  <hr>
   <section id="semestre i" class="section gallery-section">
-    <center><h1>Semestre I</h1></center>
-    <div class="gallery">
-        <a href="img_4.html"><img src="semestre1/Armonías cromáticas.png"></a>
-        <a href="img_4.html"><img src="semestre1/Grafías.jpg"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
+    <div class="tittle">
+    <h1>Semestre I</h1>
+    </div>
+    <div class="image">
+        <a href="semestreI.html"><img src="semestre1/Armonías cromáticas.png"></a>
     </div>
   </section>
 
+  <hr>
   <section id="semestre ii" class="section gallery-section">
-    <center><h1>Semestre II</h1></center>
-    <div class="gallery">
-        <a href="img_4.html"><img src="semestre2/Puntillismo.jpg"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
+    <div class="tittle">
+    <h1>Semestre II</h1>
+    </div>
+    <div class="image">
+        <a href="semestreII.html"><img src="semestre2/Puntillismo.jpg"></a>
     </div>
   </section>
 
+  <hr>
   <section id="taller" class="section gallery-section">
-    <center><h1>Taller</h1></center>
-    <div class="gallery">
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
+    <div class="tittle">
+    <h1>Taller</h1>
+    </div>
+    <div class="image">
+        <a href="taller.html"><img src="img/prueba1.png"></a>
     </div>
   </section>
 
+  <hr>
   <section id="destacados" class="section gallery-section">
-    <center><h1>Destacados</h1></center>
-    <div class="gallery">
-        <a href="img_4.html"><img src="destacados/Anime.jpg"></a>
-        <a href="img_4.html"><img src="destacados/Coco.jpg"></a>
-        <a href="img_4.html"><img src="destacados/Viper chibi.jpg"></a>
-        <a href="img_4.html"><img src="destacados/jirafa.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
-        <a href="img_4.html"><img src="img/prueba1.png"></a>
+    <div class="tittle">
+    <h1>Destacados</h1>
+   </div>
+    <div class="image">
+        <a href="destacados.html"><img src="destacados/Anime.jpg"></a>
     </div>
   </section>
 
@@ -159,9 +141,30 @@
       gap: 10px;
     }
 
-    .section1 {
-      padding: 80px 20px 20px;
-      background-color: #DBD9E7;
+    .section {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      height: 50vh;
+      padding: 20px;
+    }
+
+    .tittle {
+      width: 50%;
+      text-align: center;
+      font-size: 2rem;
+    }
+
+    .image {
+      width: 50%;
+      display: flex;
+      justify-content: center;
+    }
+
+    .image img {
+      max-width: 80%;
+      height: auto;
     }
 
     .personal-info-layout {
@@ -170,6 +173,7 @@
     }
 
     .profile-pic {
+      height: 90%;
       width: 50%;
       object-fit: cover;
       border-radius: 10px;
@@ -182,19 +186,6 @@
       flex-direction: column;
       justify-content: center;
       text-align: left;
-    }
-
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(3, minmax(150px, 1fr));
-      gap: 10px;
-      padding: 20px;
-    }
-
-    .gallery img {
-      width: 100%;
-      height: auto;
-      border: 2px solid #0D0D0D;
     }
 
     footer {
@@ -220,9 +211,32 @@
         text-align: center;
       }
 
-      .gallery {
-        grid-template-columns: repeat(2, minmax(100px, 1fr));
-      }
+      .section {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      height: 100px;
+      padding: 20px;
+    }
+
+    .tittle {
+      width: 40%;
+      text-align: center;
+      font-size: 100%;
+    }
+
+    .image {
+      width: 50%;
+      display: flex;
+      justify-content: center;
+    }
+
+    .image img {
+      max-width: 80%;
+      height: auto;
+    }
+
     }
   </style>
 
