--- a/semestreI.html
+++ b/semestreI.html
@@ -9,11 +9,10 @@
 
     <nav class="navbar">
         <div class="nav-links">
-          <a href="#personal-info">Datos Personales</a>
-          <a href="#semestre i">Semestre I</a>
-          <a href="#semestre ii">Semestre II</a>
-          <a href="#taller">Taller</a>
-          <a href="#destacados">Destacados</a>
+          <a href="index.html">Datos Personales</a>
+          <a href="semestreII.html">Semestre II</a>
+          <a href="taller.html">Taller</a>
+          <a href="destacados.html">Destacados</a>
         </div>
         <div class="right-section">
           <span>| Maria Camila Sayer</span>
