--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 <body>
   <nav class="navbar">
     <div class="nav-links">
-      <a href="#personal-info">Datos Personales</a>
-      <a href="#semestre i">Semestre I</a>
-      <a href="#semestre ii">Semestre II</a>
-      <a href="#taller">Taller</a>
-      <a href="#destacados">Destacados</a>
+      <a href="semestreI.html">Semestre I</a>
+      <a href="semestreII.html">Semestre II</a>
+      <a href="taller.html">Taller</a>
+      <a href="destacados.html">Destacados</a>
     </div>
     <div class="right-section">
       <span>| Maria Camila Sayer</span>
@@ -200,6 +199,7 @@
       .profile-pic {
         width: 70%;
         height: auto;
+        align-items: center;
       }
 
       .info-text {
