--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
       .profile-pic {
         width: 70%;
         height: auto;
-        align-items: center;
+        align-self: center;
+        margin-top: 2%;
       }
 
       .info-text {
