--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </div>
   </div>
 
+  <hr>
   <section id="semestre i" class="section gallery-section">
     <div class="tittle">
     <h1>Semestre I</h1>
@@ -73,13 +74,31 @@
   </section>
 
   <footer id="contact" class="contact-section">
-    <hr>
-    <h1>Contacto</h1>
-    <p>Gmail: camilasayer@gmail.com</p>
-    <p>Facebook: <a style="color: blue;" href="https://www.facebook.com/share/1A3JbguwPL/" target="_blank">Facebook</a></p>
-    <p>LinkedIn: <a style="color: blue;" href="https://www.linkedin.com/in/maría-camila-sáyer-medina-452a1b356" target="_blank">LinkedIn</a></p>
-    <p>Instagram: <a style="color: blue;" href="https://www.instagram.com/k1t4_?igsh=YjQ3MTh6MnUwZG93" target="_blank">Instagram</a></p>
-    <p>WhatsApp: <a style="color: blue;" href="https://wa.me/3183273101">3183273101</a></p>
+    <div class="social-icons">
+      <div class="icon-container">
+        <a href="mailto:andrestorres1076@gmail.com">
+          <img src="footer/communication.png" alt="Enviar correo" style="cursor: pointer;">
+        </a>
+          <span>Gmail</span>
+      </div>
+      <div class="icon-container">
+          <a href=""><img src="footer/facebook-app-symbol.png" alt="Facebook"></a>
+          <span>Facebook</span>
+      </div>
+      <div class="icon-container">
+          <a href=""><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn"></a>
+          <span>LinkedIn</span>
+      </div>
+      <div class="icon-container">
+          <a href=""><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram"></a>
+          <span>Instagram</span>
+      </div>
+      <div class="icon-container">
+          <a href=""><img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp"></a>
+          <span>WhatsApp</span>
+      </div>
+  </div>
+
   </footer>
 
   <style>
@@ -160,6 +179,7 @@
     .image img {
       max-width: 80%;
       height: auto;
+      padding-bottom: 10%;
     }
 
     .personal-info-layout {
@@ -168,25 +188,50 @@
     }
 
     .profile-pic {
-      height: 90%;
+      height: 100%;
       width: 50%;
       object-fit: cover;
-      border-radius: 10px;
     }
 
     .info-text {
       width: 50%;
-      padding: 20px;
+      padding: 90px 150px;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      text-align: center;
       text-align: left;
+      line-height: 30px;
+      font-size: 20px;
     }
 
     footer {
-      background-color: #DBD9E7;
+      background-color: #333;
       padding: 20px;
-      text-align: center;
+      text-align: center;            
+    }
+
+    footer span {
+      color: white;
+    }
+
+   .social-icons {
+     display: flex;
+     justify-content: center;
+     gap: 30px;
+    }
+
+    .icon-container {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+    }
+
+   .icon-container img {
+     width: 40px;
+     height: 40px;
+    }
+   .icon-container span {
+      margin-top: 5px;
     }
 
     @media (max-width: 768px) {
@@ -236,6 +281,12 @@
 
     }
   </style>
+
+<script>
+  document.getElementById("correoImagen").addEventListener("click", function() {
+      window.location.href = "mailto:andrestorres1076@gmail.com";
+  });
+</script>
 
 </body>
 </html>
