--- a/index.html
+++ b/index.html
@@ -249,6 +249,17 @@
       }
 
       .info-text {
+      width: 50%;
+      padding: 90px 150px;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      text-align: left;
+      line-height: 30px;
+      font-size: 15px;
+    }
+
+      .info-text {
         width: 100%;
         text-align: center;
       }
