--- a/index.html
+++ b/index.html
@@ -118,10 +118,11 @@
     }
 
     .navbar {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 0px;
+    padding: 10px 20px;
     background-color: #333;
     color: white;
     overflow-x: auto;
