--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
       .info-text {
       width: 50%;
-      padding: 90px 150px;
+      padding: 30px;
       display: flex;
       flex-direction: column;
       text-align: center;
