--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   </div>
 
   <hr>
+  <div class="contenidoimg">
   <section id="semestre i" class="section gallery-section">
     <div class="tittle">
     <h1>Semestre I</h1>
@@ -72,6 +73,7 @@
         <a href="destacados.html"><img src="destacados/Anime.jpg"></a>
     </div>
   </section>
+  </div>
 
   <footer>
     <a href="mailto:camilasayer@gmail.com" class="social-icon" onclick="enviarCorreo()"><img src="footer/communication.png" alt="Gmail"><p id="mensaje" style="display: none; color: white; font-weight: bold;">Correo copiado al portapapeles</p>Gmail</a>
@@ -148,6 +150,10 @@
       display: flex;
       align-items: center;
       gap: 10px;
+    }
+
+    .contenidoimg {
+      padding: 100px 0px;
     }
 
     .section {
