--- a/index.html
+++ b/index.html
@@ -257,13 +257,17 @@
         text-align: center;
       }
 
+      .contenidoimg {
+      padding: 30px 0px;
+    }
+
       .section {
       display: flex;
       align-items: center;
       justify-content: space-between;
       width: 100%;
       height: 100px;
-      padding: 20px;
+      padding: 70px 0px;
     }
 
     .tittle {
@@ -279,7 +283,7 @@
     }
 
     .image img {
-      max-width: 80%;
+      max-width: 95%;
       height: auto;
     }
 
