--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <img src="footer/facebook-app-symbol.png" alt="Facebook">
       Facebook
     </a>
-    <a href="www.linkedin.com/in/maría-camila-sáyer-medina-452a1b356" class="social-icon">
+    <a href="https://www.linkedin.com/in/mar%C3%ADa-camila-s%C3%A1yer-medina-452a1b356/" class="social-icon">
       <img src="footer/linkedin.png" alt="LinkedIn">
       LinkedIn
     </a>
