--- a/index.html
+++ b/index.html
@@ -208,63 +208,19 @@
       display: flex;
       justify-content: center;
       gap: 20px;
-      padding: 0px 0px 30px 0px;
+      padding: 20px 0;
       background-color: #333;
-      height: 200px;
     }
 
-    .facebook {
-      margin-top: 150px;
-      position: relative;
+    .social-icon {
       display: flex;
       flex-direction: column;
       align-items: center;
       text-decoration: none;
       color: white;
       font-size: 14px;
+      padding: 0px 20px;
     }
-
-    .instagram {
-      position: relative;
-      margin-top: 150px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-decoration: none;
-      color: white;
-      font-size: 14px;
-    }
-
-    .gmail {
-      margin-top: -30px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-decoration: none;
-      color: white;
-      font-size: 14px;
-    }
-
-    .linkedin {
-      margin-top: -30px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-decoration: none;
-      color: white;
-      font-size: 14px;
-    }
-
-    .whatsapp {
-      margin-top: -30px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-decoration: none;
-      color: white;
-      font-size: 14px;
-    }
-
 
     .social-icon img {
       width: 40px;
@@ -331,17 +287,79 @@
       max-width: 95%;
       height: auto;
     }
-
+    
     footer {
-        flex-direction: row;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      padding: 0px 0px 30px 0px;
+      background-color: #333;
+      height: 200px;
+      flex-direction: row;
         align-items: center;
-      }
+    }
 
-      .social-icon {
-        width: 50px;
-        margin-bottom: 15px;
-      }
-  
+    .facebook {
+      margin-top: 150px;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-decoration: none;
+      color: white;
+      font-size: 14px;
+      width: 50px;
+      margin-bottom: 15px;
+    }
+
+    .instagram {
+      position: relative;
+      margin-top: 150px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-decoration: none;
+      color: white;
+      font-size: 14px;
+      width: 50px;
+      margin-bottom: 15px;
+    }
+
+    .gmail {
+      margin-top: -30px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-decoration: none;
+      color: white;
+      font-size: 14px;
+      width: 50px;
+      margin-bottom: 15px;
+    }
+
+    .linkedin {
+      margin-top: -30px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-decoration: none;
+      color: white;
+      font-size: 14px;
+      width: 50px;
+      margin-bottom: 15px;
+    }
+
+    .whatsapp {
+      margin-top: -30px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-decoration: none;
+      color: white;
+      font-size: 14px;
+      width: 50px;
+      margin-bottom: 15px;
+    }
 
     }
   </style>
