--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
   </div>
 
   <hr>
+
+  <center><h1>Ilustraciones</h1></center>
+
   <div class="contenidoimg">
   <section id="semestre i" class="section gallery-section">
     <div class="tittle">
@@ -48,6 +51,7 @@
     </div>
   </section>
 
+  <hr>
   <section id="semestre ii" class="section gallery-section">
     <div class="tittle">
     <h1>Semestre II</h1>
@@ -57,6 +61,7 @@
     </div>
   </section>
 
+  <hr>
   <section id="taller" class="section gallery-section">
     <div class="tittle">
     <h1>Taller</h1>
@@ -66,6 +71,7 @@
     </div>
   </section>
 
+  <hr>
   <section id="destacados" class="section gallery-section">
     <div class="tittle">
     <h1>Destacados</h1>
@@ -107,7 +113,7 @@
 
     body {
       font-family: 'Work Sans', sans-serif;
-      background-color: #EAE7F8;
+      background-color: #dbd9e7;
       color: #0D0D0D;
       overflow-x: hidden;
     }
@@ -120,7 +126,7 @@
     align-items: center;
     padding: 10px 20px;
     background-color: #333;
-    color: white;
+    color: #ffffff;
     overflow-x: auto;
     white-space: nowrap;
   }
@@ -129,7 +135,7 @@
     gap: 20px;
   }
   .nav-links a {
-    color: white;
+    color: #ffffff;
     text-decoration: none;
   }
   .nav-links a:hover {
@@ -144,13 +150,21 @@
   .logo {
     width: 40px;
     height: 40px;
-    background-color: white;
+    background-color: #ffffff;
     border-radius: 50%;
   }
     .logo-container {
       display: flex;
       align-items: center;
       gap: 10px;
+    }
+  
+    hr {
+      border: none;
+      height: 5px;
+      color: #eae7f8;
+      background-color: #eae7f8;
+      margin-bottom: 50px;
     }
 
     .contenidoimg {
@@ -163,7 +177,7 @@
       justify-content: space-between;
       width: 100%;
       height: 50vh;
-      padding: 20px;
+      padding: 0px 0px 50px 0px;
     }
 
     .tittle {
@@ -218,7 +232,7 @@
       flex-direction: column;
       align-items: center;
       text-decoration: none;
-      color: white;
+      color: #ffffff;
       font-size: 14px;
       padding: 0px 20px;
     }
@@ -307,7 +321,7 @@
       flex-direction: column;
       align-items: center;
       text-decoration: none;
-      color: white;
+      color: #ffffff;
       font-size: 14px;
       width: 50px;
       margin-bottom: 15px;
@@ -320,7 +334,7 @@
       flex-direction: column;
       align-items: center;
       text-decoration: none;
-      color: white;
+      color: #ffffff;
       font-size: 14px;
       width: 50px;
       margin-bottom: 15px;
@@ -332,7 +346,7 @@
       flex-direction: column;
       align-items: center;
       text-decoration: none;
-      color: white;
+      color: #ffffff;
       font-size: 14px;
       width: 50px;
       margin-bottom: 15px;
@@ -344,7 +358,7 @@
       flex-direction: column;
       align-items: center;
       text-decoration: none;
-      color: white;
+      color: #ffffff;
       font-size: 14px;
       width: 50px;
       margin-bottom: 15px;
@@ -356,7 +370,7 @@
       flex-direction: column;
       align-items: center;
       text-decoration: none;
-      color: white;
+      color: #ffffff;
       font-size: 14px;
       width: 50px;
       margin-bottom: 15px;
