--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     body {
       font-family: 'Work Sans', sans-serif;
       background-color: #dbd9e7;
-      color: #0D0D0D;
+      color: #333;
       overflow-x: hidden;
     }
 
@@ -244,6 +244,10 @@
     }
 
     @media (max-width: 768px) {
+
+      .right-section span {
+      display: none;
+    }
 
       .personal-info-layout {
         flex-direction: column;
