--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@
       display: none;
     }
 
+    .section {
+      margin-bottom: 30px;
+    }
+
       .personal-info-layout {
         flex-direction: column;
         height: auto;
