--- a/taller.html
+++ b/taller.html
@@ -30,26 +30,26 @@
       <hr>
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="semestre1/Armonías cromáticas.png">
+          <img src="">
       </div>
         <div class="tittle">
-        <h1>Armonías cromáticas (2024)</h1>
+        <h1>empty</h1>
         <br>
         <br>
-        <p>Esta serie de ilustraciones explora el uso de armonías cromáticas a través de composiciones geométricas dinámicas. Cada pieza utiliza una combinación de colores estratégicamente seleccionados para generar equilibrio y contraste visual. La técnica empleada es marcadores sobre papel, permitiendo una aplicación vibrante y precisa del color.</p>
+        <p>empty</p>
        </div>
       </section>
 
       <hr>
       <section id="semestreI" class="section gallery-section">
         <div class="image">
-          <img src="semestre1/Grafías.jpg">
+          <img src="">
       </div>
         <div class="tittle">
-        <h1>Grafías (2024)</h1>
+        <h1>empty</h1>
         <br>
         <br>
-        <p>Serie de ilustraciones experimentales creadas con tinta y objetos no convencionales como cadenas, latas de cerveza y plástico de burbujas. Esta técnica explora la textura y el azar en la composición, generando formas y patrones únicos. Mediante la impresión y el uso de diferentes herramientas, se logra una estética abstracta y expresiva, resaltando el contraste entre el negro de la tinta y el fondo blanco del papel.</p>
+        <p>empty</p>
        </div>
       </section>
 
