--- a/semestreII.html
+++ b/semestreII.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar">
         <div class="nav-links">
-          <a href="index.html">Datos Personales</a>
+          <a href="index.html">Inicio</a>
           <a href="semestreI.html">Semestre I</a>
           <a href="taller.html">Taller</a>
           <a href="taller.html">Taller</a>
