--- a/semestreI.html
+++ b/semestreI.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar">
         <div class="nav-links">
-          <a href="index.html">Datos Personales</a>
+          <a href="index.html">Inicio</a>
           <a href="semestreII.html">Semestre II</a>
           <a href="taller.html">Taller</a>
           <a href="destacados.html">Destacados</a>
