ajuste de texto

--- a/semestreI.html
+++ b/semestreI.html
@@ -153,8 +153,14 @@
 
     .tittle {
       width: 50%;
-      text-align: center;
       font-size: 1rem;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      text-align: left;
+      line-height: 30px;
+      font-size: 18px;
+      margin-right: 10px;
     }
 
     .image {
@@ -196,6 +202,18 @@
 
       .right-section span {
       display: none;
+    }
+
+    .tittle{
+      width: 50%;
+      font-size: 1rem;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      text-align: left;
+      line-height: 15px;
+      font-size: 10px;
+      margin-right: 10px;
     }
 
       footer {
