--- a/semestreI.html
+++ b/semestreI.html
@@ -25,8 +25,14 @@
         </div>
       </nav>
 
+      <div>
+        <button onclick="window.history.back();" class="back-btn">
+          <img src="img/back.png" alt="">
+        </button>
       <center><h1 class="titulo">Semestre I</h1></center>
       
+      </div>
+
       <hr>
       <section id="semestreI" class="section gallery-section">
         <div class="image">
@@ -130,6 +136,22 @@
       gap: 10px;
     }
 
+    .back-btn {
+      border: none;
+      background: none;
+      cursor: pointer;
+      position: absolute;
+      margin-top: 7%;
+  }
+  .back-btn img {
+      width: 40px;
+      height: 40px;
+      transition: transform 0.2s;
+  }
+  .back-btn:hover img {
+      transform: scale(1.1);
+  }
+
     .titulo{
       padding: 100px 0px 40px 0px;
     }
@@ -203,6 +225,10 @@
       .right-section span {
       display: none;
     }
+
+    .back-btn {
+      margin-top: 22%;
+  }
 
     .tittle{
       width: 50%;
