--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="right-section">
       <span>| Maria Camila Sayer</span>
-      <img class="logo" src="img/cs.png" alt="">
+      <img class="logo" src="img/Logo.webp" alt="">
     </div>
   </nav>
 
@@ -44,7 +44,7 @@
   <div class="contenidoimg">
   <section id="semestre i" class="section gallery-section">
     <div class="tittle">
-    <h1>Semestre I</h1>
+    <a href="semestreI.html"><h1>Semestre I</h1></a>
     </div>
     <div class="image">
         <a href="semestreI.html"><img src="semestre1/Armonías cromáticas.png"></a>
@@ -54,7 +54,7 @@
   <hr>
   <section id="semestre ii" class="section gallery-section">
     <div class="tittle">
-    <h1>Semestre II</h1>
+    <a href="semestreII.html"><h1>Semestre II</h1></a>
     </div>
     <div class="image">
         <a href="semestreII.html"><img src="semestre2/Puntillismo.jpg"></a>
@@ -64,7 +64,7 @@
   <hr>
   <section id="taller" class="section gallery-section">
     <div class="tittle">
-    <h1>Taller</h1>
+    <a href="taller.html"><h1>Taller</h1></a>
     </div>
     <div class="image">
         <a href="taller.html"><img src="img/prueba1.png"></a>
@@ -74,7 +74,7 @@
   <hr>
   <section id="destacados" class="section gallery-section">
     <div class="tittle">
-    <h1>Destacados</h1>
+    <a href="destacados.html"><h1>Destacados</h1></a>
    </div>
     <div class="image">
         <a href="destacados.html"><img src="destacados/Anime.jpg"></a>
@@ -185,6 +185,11 @@
       width: 50%;
       text-align: center;
       font-size: 2rem;
+    }
+
+    .tittle a{
+      text-decoration: none;
+      color: #333;
     }
 
     .image {
