--- a/semestreI.html
+++ b/semestreI.html
@@ -59,6 +59,19 @@
        </div>
       </section>
 
+      <hr>
+      <section id="semestreI" class="section gallery-section">
+        <div class="image">
+          <img src="semestre1/Puntillismo.jpg">
+      </div>
+        <div class="tittle">
+        <h1>Puntillismo (2024)</h1>
+        <br>
+        <br>
+        <p>Ilustración realizada con rapidógrafo utilizando la técnica de puntillismo para explorar el volumen y la profundidad a través de la densidad de los puntos. La composición presenta dos peces con un enfoque en la tridimensionalidad de sus ojos y la fluidez de sus aletas, logrando un equilibrio entre precisión y expresividad. El contraste entre áreas de mayor y menor concentración de puntos define las formas y refuerza la sensación de movimiento, otorgando a la obra un carácter orgánico y detallado.</p>
+       </div>
+      </section>
+
       <footer>
         <a href="mailto:camilasayer@gmail.com" class="social-icon gmail" onclick="enviarCorreo()"><img src="footer/communication.png" alt="Gmail"><p id="mensaje" style="display: none; color: white; font-weight: bold;">Correo copiado al portapapeles</p>Gmail</a>
     
