--- a/taller.html
+++ b/taller.html
@@ -15,8 +15,6 @@
     <nav class="navbar">
         <div class="nav-links">
           <a href="index.html">Inicio</a>
-          <a href="semestreI.html">Semestre I</a>
-          <a href="semestreII.html">Semestre II</a>
           <a href="destacados.html">Destacados</a>
         </div>
         <div class="right-section">
@@ -32,30 +30,8 @@
       </div>
 
       <hr>
-      <section id="semestreI" class="section gallery-section">
-        <div class="image">
-          <img src="">
-      </div>
-        <div class="tittle">
-        <h1>empty</h1>
-        <br>
-        <br>
-        <p>empty</p>
-       </div>
-      </section>
 
       <hr>
-      <section id="semestreI" class="section gallery-section">
-        <div class="image">
-          <img src="">
-      </div>
-        <div class="tittle">
-        <h1>empty</h1>
-        <br>
-        <br>
-        <p>empty</p>
-       </div>
-      </section>
 
       <footer>
         <a href="mailto:camilasayer@gmail.com" class="social-icon gmail" onclick="enviarCorreo()"><img src="footer/communication.png" alt="Gmail"><p id="mensaje" style="display: none; color: white; font-weight: bold;">Correo copiado al portapapeles</p>Gmail</a>
@@ -162,31 +138,8 @@
       margin-bottom: 50px;
     }
     
-    .section {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      width: 100%;
-      height: 50vh;
-      padding: 50px 0px 100px 0px;
-    }
 
-    .tittle {
-      width: 50%;
-      text-align: center;
-      font-size: 1rem;
-    }
 
-    .image {
-      width: 50%;
-      display: flex;
-      justify-content: center;
-    }
-
-    .image img {
-      max-width: 80%;
-      height: auto;
-    }
           
     footer {
       display: flex;
@@ -216,6 +169,10 @@
 
       .right-section span {
       display: none;
+    }
+
+    .back-btn {
+      margin-top: 20%;
     }
 
       footer {
