--- a/index.html
+++ b/index.html
@@ -37,27 +37,7 @@
 
   <hr>
 
-  <center><h1>Ilustraciones</h1></center>
-
-  <div class="contenidoimg">
-  <section id="semestre i" class="section gallery-section">
-    <div class="tittle">
-    <a href="semestreI.html"><h1>Semestre I</h1></a>
-    </div>
-    <div class="image">
-        <a href="semestreI.html"><img src="semestre1/Armonías cromáticas.png"></a>
-    </div>
-  </section>
-
-  <hr>
-  <section id="semestre ii" class="section gallery-section">
-    <div class="tittle">
-    <a href="semestreII.html"><h1>Semestre II</h1></a>
-    </div>
-    <div class="image">
-        <a href="semestreII.html"><img src="semestre2/Puntillismo.jpg"></a>
-    </div>
-  </section>
+  <center><h1 class="tituloxd">Ilustraciones</h1></center>
 
   <hr>
   <section id="taller" class="section gallery-section">
@@ -156,6 +136,10 @@
       display: flex;
       align-items: center;
       gap: 10px;
+    }
+
+    .tituloxd {
+      margin-bottom: 5%;
     }
   
     hr {
