ajustes de textos

--- a/destacados.html
+++ b/destacados.html
@@ -73,35 +73,6 @@
        </div>
       </section>
 
-      <hr>
-
-      <center><h2 class="titulo">Semestre I</h2></center>
-
-      <hr>
-      <section id="semestreI" class="section gallery-section">
-        <div class="image">
-          <img src="semestre1/Armonías cromáticas.png">
-      </div>
-        <div class="tittle">
-        <h1>Armonías cromáticas (2024)</h1>
-        <br>
-        <br>
-        <p>Esta serie de ilustraciones explora el uso de armonías cromáticas a través de composiciones geométricas dinámicas. Cada pieza utiliza una combinación de colores estratégicamente seleccionados para generar equilibrio y contraste visual. La técnica empleada es marcadores sobre papel, permitiendo una aplicación vibrante y precisa del color.</p>
-       </div>
-      </section>
-
-      <hr>
-      <section id="semestreI" class="section gallery-section">
-        <div class="image">
-          <img src="semestre1/Grafías.jpg">
-      </div>
-        <div class="tittle">
-        <h1>Grafías (2024)</h1>
-        <br>
-        <br>
-        <p>Serie de ilustraciones experimentales creadas con tinta y objetos no convencionales como cadenas, latas de cerveza y plástico de burbujas. Esta técnica explora la textura y el azar en la composición, generando formas y patrones únicos. Mediante la impresión y el uso de diferentes herramientas, se logra una estética abstracta y expresiva, resaltando el contraste entre el negro de la tinta y el fondo blanco del papel.</p>
-       </div>
-      </section>
 
       <footer>
         <a href="mailto:camilasayer@gmail.com" class="social-icon gmail" onclick="enviarCorreo()"><img src="footer/communication.png" alt="Gmail"><p id="mensaje" style="display: none; color: white; font-weight: bold;">Correo copiado al portapapeles</p>Gmail</a>
@@ -218,7 +189,11 @@
       justify-content: space-between;
       width: 100%;
       height: 50vh;
-      padding: 50px 0px 100px 0px;
+      padding: 60px 0px 100px 0px;
+    }
+
+    .tittle p{
+      padding: 0% 5% 0% 0%;      
     }
 
     .tittle {
@@ -281,6 +256,10 @@
       height: 200px;
       flex-direction: row;
         align-items: center;
+    }
+
+    .section{
+      padding: 40% 0% 50% 0%;
     }
 
     .facebook {
